static/css/styles.css
html {
  position: relative;
  min-height: 100%;
}

body {
  /* Allow room for the footer */
  margin-bottom: 150px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 150px;
  background-color: #f5f5f5;
  color: #b3b3b3;
}

.footer nav ul {
  padding-left: 0;
}

.footer nav ul li {
  list-style-type: none;
  display: inline;
}

.footer nav ul li:after {
  content: ' | ';
}

.footer nav ul li:last-child:after {
  content: '';
}

.footer nav a {
  color: #333333;
  text-decoration: underline;
}

.footer nav a:hover {
  color: #888888;
}

.footer > .container {
  padding: 15px 15px 0 15px;
}

